[gd_scene load_steps=5 format=3 uid="uid://b3c53h1ricqui"]

[ext_resource type="Script" path="res://scripts/environment/ClimableSurface.gd" id="1_bnxam"]
[ext_resource type="Texture2D" uid="uid://dsu1bna40c6du" path="res://assets/sprites/environment/ladder.png" id="2_swa4o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2bsu"]
size = Vector2(58, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg17t"]
size = Vector2(70, 20)

[node name="ClimableSurafce" type="Area2D"]
script = ExtResource("1_bnxam")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_swa4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q2bsu")

[node name="Tooltip" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="TopEntry" type="CollisionShape2D" parent="."]
position = Vector2(10, -54)
shape = SubResource("RectangleShape2D_kg17t")

[node name="BottomEntry" type="CollisionShape2D" parent="."]
position = Vector2(-6, 52)
shape = SubResource("RectangleShape2D_kg17t")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
